<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="405dp"
        android:layout_height="455dp"
        android:layout_marginTop="72dp"
        android:background="#E6E66F60"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTitle" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/profile_title"
        android:textColor="@color/darkBrown"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mushroomIcon"
        android:layout_width="349dp"
        android:layout_height="707dp"
        android:layout_marginTop="-226dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:srcCompat="@drawable/aurora15" />

    <TextView
        android:id="@+id/myname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-216dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/myname"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mushroomIcon" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="-110dp"
        android:backgroundTint="@color/white"
        android:text="@string/logout"
        android:textColor="@color/darkBrown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroomIcon" />

    <Button
        android:id="@+id/deleteAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/extra_transparent"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutButton" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="422dp"
        android:layout_height="80dp"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/navPomodoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pomodoro"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/navTasks"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tasks"
            android:src="@drawable/tasks" />

        <ImageButton
            android:id="@+id/navSettings"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings" />

        <ImageButton
            android:id="@+id/navProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
