<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".HomeActivity">

    <!-- App Name and Icons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/timerCircle"
        android:layout_width="320dp"
        android:layout_height="304dp"
        android:layout_marginTop="-106dp"
        android:background="@drawable/browncircle"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:text="@string/timervalue"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/startFocus"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/title_color"
        android:text="@string/startfocus"
        android:textColor="@android:color/white"
        app:iconTint="@color/title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerCircle" />

    <Button
        android:id="@+id/takeBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/take_break"
        android:textColor="@color/darkBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startFocus" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/reset"
        android:textColor="@color/darkBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startFocus" />

    <LinearLayout
        android:layout_width="422dp"
        android:layout_height="80dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-8dp"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeBreak">

        <ImageButton
            android:id="@+id/navPomodoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pomodoro"
            android:src="@drawable/home"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/navTasks"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tasks"
            android:src="@drawable/tasks"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/navSettings"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/navProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/fredoka_one"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/appName"
        android:textColor="@color/darkBrown"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="147dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/timerCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:srcCompat="@drawable/aurora4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="420dp"
        android:layout_height="169dp"
        android:layout_marginTop="-120dp"
        android:layout_marginBottom="680dp"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
