<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SettingsActivity">

    <!-- Settings Title -->
    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/newsettings"
        android:textColor="@color/title_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adjustTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="69dp"
        android:letterSpacing="0.02"
        android:text="@string/adjust_timer"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:dropDownWidth="180dp"
        android:elevation="4dp"
        android:entries="@array/timer_options"
        android:popupBackground="@color/darkBrown"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adjustTimerText" />


    <ImageView
        android:id="@+id/mushroomImage"
        android:layout_width="257dp"
        android:layout_height="267dp"
        android:src="@drawable/aurora16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/motivationalTextView"
        android:layout_width="331dp"
        android:layout_height="169dp"
        android:background="@drawable/rounded_corners"
        android:elevation="100dp"
        android:gravity="center"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="4dp"
        android:padding="30dp"
        android:shadowColor="#181212"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="20"
        android:text="@string/msg"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroomImage" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="422dp"
        android:layout_height="80dp"
        android:layout_marginBottom="-40dp"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivationalTextView">

        <ImageButton
            android:id="@+id/navPomodoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pomodoro"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/navTasks"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tasks"
            android:src="@drawable/tasks" />

        <ImageButton
            android:id="@+id/navSettings"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings" />

        <ImageButton
            android:id="@+id/navProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
